--- a/수석프로젝트/SuseokProject/src/main/resources/application.properties
+++ b/수석프로젝트/SuseokProject/src/main/resources/application.properties
@@ -7,6 +7,6 @@ spring.datasource.username=suseok
 spring.datasource.password=suseok
 
 #MyBatis 
-mybatis.mapper-locations=classpath:mappers/*.xml
+mybatis.mapper-locations=classpath:mappers/**/*.xml
 mybatis.type-aliases-package=com.suseok.running.model.dto
 mybatis.configuration.map-underscore-to-camel-case=true
