--- a/수석프로젝트/SuseokProject/src/main/resources/application.properties
+++ b/수석프로젝트/SuseokProject/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=SuseokProject
+server.port=8000
 
 #dataSource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
