--- a/수석프로젝트/SuseokProject/src/main/resources/application.properties
+++ b/수석프로젝트/SuseokProject/src/main/resources/application.properties
@@ -11,3 +11,8 @@ spring.datasource.password=suseok
 mybatis.mapper-locations=classpath:mappers/**/*.xml
 mybatis.type-aliases-package=com.suseok.run.model.dto, com.suseok.record.model.dto
 mybatis.configuration.map-underscore-to-camel-case=true
+
+#
+jwt.key=sooa-seokmin-love-forever
+jwt.accesstoken.expiretime=3600
+jwt.refreshtoken.expiretime=2592000
