--- a/수석프로젝트/SuseokProject/src/main/resources/application.properties
+++ b/수석프로젝트/SuseokProject/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.password=suseok
 
 #MyBatis 
 mybatis.mapper-locations=classpath:mappers/**/*.xml
-mybatis.type-aliases-package=com.suseok.run.model.dto, com.suseok.record.model.dto
+mybatis.type-aliases-package=com.suseok.run.basic.model.dto, com.suseok.run.core.model.dto
 mybatis.configuration.map-underscore-to-camel-case=true
 
 #
