--- a/수석프로젝트/SuseokProject/src/main/resources/application.properties
+++ b/수석프로젝트/SuseokProject/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8000
 
 #dataSource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/???????????serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/suseok?serverTimezone=UTC
 spring.datasource.username=suseok
 spring.datasource.password=suseok
 
