--- a/수석프로젝트/SuseokProject/src/main/resources/application.properties
+++ b/수석프로젝트/SuseokProject/src/main/resources/application.properties
@@ -1,15 +1,15 @@
 spring.application.name=SuseokProject
-server.port=8000
+server.port=8080
 
 #dataSource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/suseok?serverTimezone=UTC
-spring.datasource.username=suseok
-spring.datasource.password=suseok
+spring.datasource.username=ssafy
+spring.datasource.password=ssafy
 
 #MyBatis 
-mybatis.mapper-locations=classpath:mappers/**/*.xml
-mybatis.type-aliases-package=com.suseok.run.basic.model.dto, com.suseok.run.core.model.dto
+mybatis.mapper-locations=classpath:mappers/*.xml
+mybatis.type-aliases-package=com.suseok.run.model.dto
 mybatis.configuration.map-underscore-to-camel-case=true
 
 #
