--- a/수석프로젝트/SuseokProject/pom.xml
+++ b/수석프로젝트/SuseokProject/pom.xml
@@ -81,6 +81,11 @@
 		    <version>0.12.5</version>
 		    <scope>runtime</scope>
 		</dependency>
+		<dependency>
+	        <groupId>javax.xml.bind</groupId>
+	        <artifactId>jaxb-api</artifactId>
+	        <version>2.3.1</version>
+	    </dependency>
 	</dependencies>
 
 	<build>
