--- a/수석프로젝트/SuseokProject/pom.xml
+++ b/수석프로젝트/SuseokProject/pom.xml
@@ -21,6 +21,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+	    <dependency>
+	    	<groupId>org.springframework.boot</groupId>
+	    	<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.mybatis.spring.boot</groupId>
 			<artifactId>mybatis-spring-boot-starter</artifactId>
@@ -86,6 +90,8 @@
 	        <artifactId>jaxb-api</artifactId>
 	        <version>2.3.1</version>
 	    </dependency>
+		
+		
 	</dependencies>
 
 	<build>
