--- a/수석프로젝트/SuseokProject/src/main/resources/application.properties
+++ b/수석프로젝트/SuseokProject/src/main/resources/application.properties
@@ -26,3 +26,6 @@ spring.security.oauth2.client.registration.strava.scope=read,activity:read_all
 spring.security.oauth2.client.provider.strava.authorization-uri=https://www.strava.com/oauth/authorize
 spring.security.oauth2.client.provider.strava.token-uri=https://www.strava.com/oauth/token
 spring.security.oauth2.client.provider.strava.user-info-uri=https://www.strava.com/api/v3/athlete
+
+spring.security.user.name=suseok
+spring.security.user.password=suseok
