--- a/수석프로젝트/SuseokProject/src/main/resources/application.properties
+++ b/수석프로젝트/SuseokProject/src/main/resources/application.properties
@@ -11,15 +11,15 @@ spring.datasource.password=ssafy
 mybatis.mapper-locations=classpath:mappers/*.xml
 mybatis.type-aliases-package=com.suseok.run.model.dto
 mybatis.configuration.map-underscore-to-camel-case=true
-
-#strava api
-spring.security.oauth2.client.registration.strava.client-id=your-client-id
-spring.security.oauth2.client.registration.strava.client-secret=your-client-secret
-spring.security.oauth2.client.registration.strava.redirect-uri=http://localhost:8080/login/oauth2/code/strava
-spring.security.oauth2.client.registration.strava.scope=read,activity:read_all
-spring.security.oauth2.client.provider.strava.authorization-uri=https://www.strava.com/oauth/authorize
-spring.security.oauth2.client.provider.strava.token-uri=https://www.strava.com/oauth/token
-spring.security.oauth2.client.provider.strava.user-info-uri=https://www.strava.com/api/v3/athlete
-
-spring.security.user.name=suseok
-spring.security.user.password=suseok
+#
+##strava api
+#spring.security.oauth2.client.registration.strava.client-id=your-client-id
+#spring.security.oauth2.client.registration.strava.client-secret=your-client-secret
+#spring.security.oauth2.client.registration.strava.redirect-uri=http://localhost:8080/login/oauth2/code/strava
+#spring.security.oauth2.client.registration.strava.scope=read,activity:read_all
+#spring.security.oauth2.client.provider.strava.authorization-uri=https://www.strava.com/oauth/authorize
+#spring.security.oauth2.client.provider.strava.token-uri=https://www.strava.com/oauth/token
+#spring.security.oauth2.client.provider.strava.user-info-uri=https://www.strava.com/api/v3/athlete
+#
+#spring.security.user.name=suseok
+#spring.security.user.password=suseok
