--- a/수석프로젝트/SuseokProject/src/main/resources/application.properties
+++ b/수석프로젝트/SuseokProject/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=SuseokProject
 server.port=8080
 
+
 #dataSource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/suseok?serverTimezone=UTC
@@ -11,15 +12,6 @@ spring.datasource.password=ssafy
 mybatis.mapper-locations=classpath:mappers/*.xml
 mybatis.type-aliases-package=com.suseok.run.model.dto
 mybatis.configuration.map-underscore-to-camel-case=true
-#
-##strava api
-#spring.security.oauth2.client.registration.strava.client-id=your-client-id
-#spring.security.oauth2.client.registration.strava.client-secret=your-client-secret
-#spring.security.oauth2.client.registration.strava.redirect-uri=http://localhost:8080/login/oauth2/code/strava
-#spring.security.oauth2.client.registration.strava.scope=read,activity:read_all
-#spring.security.oauth2.client.provider.strava.authorization-uri=https://www.strava.com/oauth/authorize
-#spring.security.oauth2.client.provider.strava.token-uri=https://www.strava.com/oauth/token
-#spring.security.oauth2.client.provider.strava.user-info-uri=https://www.strava.com/api/v3/athlete
-#
-#spring.security.user.name=suseok
-#spring.security.user.password=suseok
+
+## JWT 설정
+#jwt.secret=your-very-long-secret-key-here-which-is-at-least-32-characters-long
