--- a/Vue/suseok/package.json
+++ b/Vue/suseok/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.3",
+    "fullcalendar": "^6.1.13",
     "lodash": "^4.17.21",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.1",
